--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
+    "psn-api": "^2.10.1",
     "react": "^18",
     "react-dom": "^18"
   },
